<resources>
    <string name="app_name">MUFIT</string>
    <string name="please_wait">Mohon tunggu</string>
    <string name="default_content_desc">Default description</string>
    <string name="welcome_sign_up">Selamat Datang, Fit People!</string>
    <string name="email">Email</string>
    <string name="phone">Nomor telepon</string>
    <string name="password">Kata sandi</string>
    <string name="confirmation_password">Konfirmasi kata sandi</string>
    <string name="sign_up">DAFTAR</string>
    <string name="sign_up_in_login">Daftar</string>
    <string name="ask_mufit_account">Sudah punya akun MUFIT?\u0020</string>
    <string name="login">Masuk</string>
    <string name="here">&#160;disini!</string>
    <string name="no_internet">Tidak ada koneksi internet</string>
    <string name="email_exist">Email sudah terdaftar</string>
    <string name="dialog_success">Sukses</string>
    <string name="check_email_activate">Terima kasih telah melakukan registrasi! Langkah selanjutnya, silahkan masuk ke email Anda dan lakukan verifikasi e-mail untuk mengaktifkan akun Anda.
        \n\n
        Jika Anda tidak menerima notifikasi e-mail, silahkan tunggu beberapa saat atau cek folder Spam Anda.</string>
    <string name="empty_form_registration">Form harus diisi</string>
    <string name="error_try_again">Mohon coba lagi nanti</string>
    <string name="tos">Terms of Service</string>
    <string name="text_tos">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    Cras tempor, diam eget luctus pretium, ex ante aliquam lorem, ac convallis orci nunc consectetur eros.
    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
    Etiam fermentum pretium magna ut elementum. Sed pharetra vulputate odio et gravida. Sed ut est diam.
    Fusce nibh nulla, rutrum ac ex vitae, pellentesque euismod nisi dapibus ut. Nullam consectetur sagittis scelerisque.
    Donec sed pretium sapien.</string>
    <string name="agree">Setuju</string>
    <string name="title_menu">MuHealth</string>
    <string name="title_home">MuTrain</string>
    <string name="title_history">Riwayat</string>
    <string name="title_schedule">Jadwal</string>
    <string name="title_notif">Notif</string>
    <string name="title_login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="logout_message">Apakah Anda ingin keluar?</string>
    <string name="welcome_text_login">Selamat Datang kembali, Fit People!</string>
    <string name="email_phone_text_login">Email atau nomor telepon</string>
    <string name="password_text_login">Kata sandi</string>
    <string name="button_text_login">Masuk</string>
    <string name="to_register_1">Belum punya akun MUFIT?</string>
    <string name="to_register_2">Daftar</string>
    <string name="to_register_3">disini!</string>
    <string name="snackbar_validation_empty">Isi email/nomor telepon dan kata sandi</string>
    <string name="login_as_admin_validation">Admin tidak bisa masuk</string>
    <string name="to_forgot_pass_1">Lupa kata sandi?</string>
    <string name="to_forgot_pass_2">Klik</string>
    <string name="to_forgot_pass_3">disini</string>
    <string name="forgot_pass_title">Lupa Kata Sandi?</string>
    <string name="forgot_pass_text_1">Masukkan alamat email &amp; ketuk tombol kirim</string>
    <string name="forgot_pass_text_2">Kami akan menghubungi melalui email segera</string>
    <string name="edit_text_forgot_pass">Email</string>
    <string name="button_text_forgot_pass">Kirim</string>
    <string name="snackbar_validation_empty_forgot_pass">Mohon masukkan email</string>
    <string name="ok">OKE</string>
    <string name="rating_text">Rating</string>
    <string name="rating">5.0</string>
    <string name="popular">Populer</string>
    <string name="price">Harga</string>
    <string name="booking_now">Pesan Sesi</string>
    <string name="booking_package">Pesan Paket</string>
    <string name="see_all">See All</string>
    <string name="hide">Hide</string>
    <string name="edit_text_trainer_list_1">Filter berdasarkan nama pelatih</string>
    <string name="edit_text_trainer_list_2">Filter berdasarkan tanggal</string>
    <string name="toolbar_title_trainer_list">Search</string>
    <string name="next">Berikutnya</string>
    <string name="msg_must_agree_tos">You must agree to our terms of service</string>
    <string name="filter">Filter</string>
    <string name="gender">Gender</string>
    <string name="man">Pria</string>
    <string name="woman">Wanita</string>
    <string name="man_id">M</string>
    <string name="woman_id">F</string>
    <string name="location">Lokasi</string>
    <string name="jakbar">Jakarta Barat</string>
    <string name="jaktim">Jakarta Timur</string>
    <string name="jakpus">Jakarta Pusat</string>
    <string name="jaksel">Jakarta Selatan</string>
    <string name="jakut">Jakarta Utara</string>
    <string name="categories">Program Kami</string>
    <string name="trx_training">TRX Training</string>
    <string name="yoga">Yoga</string>
    <string name="personal_training">Personal Training</string>
    <string name="zumba">Zumba</string>
    <string name="yoga_power">Yoga Power</string>
    <string name="pilates">Pilates</string>
    <string name="apply">Cari</string>
    <string name="apply_date_time">Apply Date &amp; time</string>
    <string name="training_schedule">Jadwal Training</string>
    <string name="password_not_match">Password tidak sama</string>
    <string name="forgot_pass_validation_empty">Mohon isi email Anda</string>
    <string name="forgot_pass_success">Email telah di terkirim ke email Anda</string>
    <string name="fullname">Nama lengkap</string>
    <string name="not_valid_email">Email tidak valid</string>
    <string name="phone_validation">Telepon harus dimulai dengan \'08\' dan lebih dari 9 karakter</string>
    <string name="invalid_password">Kata sandi minimal 8 karakter dengan alfanumerik</string>
    <string name="empty_list_trainer">List pelatih kosong</string>
    <string name="trainer_not_found">Oops... Trainer tidak ditemukan</string>
    <string name="news_not_found">Oops... Berita tidak ditemukan</string>
    <string name="promo_not_found">Oops... Kupon dan berita tidak ditemukan</string>
    <string name="event_not_found">Oops... Event tidak ditemukan</string>
    <string name="date_time"><![CDATA[Tanggal & Waktu]]></string>
    <string name="select_shift">Pilih Waktu</string>
    <string name="class_mufit">Kelas</string>
    <string name="minus">-</string>
    <string name="zero_dummy">0</string>
    <string name="plus">+</string>
    <string name="booking_time_dummy">17.00- 19.00</string>
    <string name="speciality_dummy">Body Combat</string>
    <string name="booking_price_dummy">Rp 500.000*</string>
    <string name="exclude_tax">* Belum termasuk pajak</string>
    <string name="booking_location_title">Lokasi training</string>
    <string name="enter_location">Pilih lokasi training</string>
    <string name="booking_pick_location"><u>Pilih lokasi dalam peta</u></string>
    <string name="booking_rekening_dummy">Transfer ke BCA 527 xxx xxxx Mufit</string>
    <string name="booking_payment_title">Pembayaran</string>
    <string name="booking_have_voucher_code">Punya kode voucher?</string>
    <string name="voucher_code">Kode voucher</string>
    <string name="booking_total">Total</string>
    <string name="booking_price_dummy_2">2.200.000</string>
    <string name="confirm_booking">Konfirmasi Booking</string>
    <string name="name_trainer_dummy">Alvin Armstrong</string>
    <string name="today">Today is the day</string>
    <string name="booking_schedule_dummy">10.00 - 12.00</string>
    <string name="detail_trainer_text_empty_message_1">Oops... Tidak ada jadwal latihan hari ini</string>
    <string name="detail_trainer_text_empty_message_2">Silahkan pilih tanggal lainnya</string>
    <string name="detail_trainer">Detail Pelatih</string>
    <string name="detail_trainer_divider_price">/ Rp \u0020</string>
    <string name="duration">Durasi</string>
    <string name="schedule_title">Detail Jadwal</string>
    <string name="schedule_no_detail">Tidak ada jadwal untuk tanggal ini</string>
    <string name="time_class_validation">Pilih waktu dan kelas yang diinginkan</string>
    <string name="booking">Booking</string>
    <string name="voucher_not_found">Voucher tidak valid</string>
    <string name="voucher_found">Voucher ditemukan</string>
    <string name="confirmation_booking">Apakah Anda ingin membuat booking?</string>
    <string name="success_booking">Booking sukses</string>
    <string name="choose_address">Alamat harus diisi</string>
    <string name="join_shift">Gabungkan semua jadwal kelas tanpa waktu istirahat</string>
    <string name="join_separate">Pisah jadwal kelas sesuai jadwal yang tersedia</string>
    <string name="session_validation">Pilih jumlah sesi yang sesuai dengan jadwal pilihan</string>
    <string name="on_going">Sedang Berlangsung</string>
    <string name="completed">Selesai</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="cancel_booking_1">Apakah Anda akan</string>
    <string name="cancel_booking_2">membatalkan booking ini ?</string>
    <string name="cancel_booking_3">Beritahukan alasan pembatalan Anda</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit_rate_review">Kirim</string>
    <string name="submit_cancel">Batalkan</string>
    <string name="cancel_booking_reason_empty">Mohon isi alasan pembatalan booking</string>
    <string name="cancel_booking_success">Booking Anda berhasil di batalkan</string>
    <string name="cancel_booking_reason_hint">Alasan pembatalan booking</string>
    <string name="change_password_success">Berhasil mengubah kata sandi Anda.</string>
    <string name="confirmed">Konfirmasi</string>
    <string name="trainer_confirmation">Konfirmasi Pelatih</string>
    <string name="history_booking_empty_validation">Oops... Riwayat booking Anda kosong. &#160;</string>
    <string name="rate_review_toolbar_title">Rate &amp; Review </string>
    <string name="rating_star_dummy">5.0</string>
    <string name="review_dummy">43 Review</string>
    <string name="rate_review_desc">Bantu tingkatkan pelayanan kami!</string>
    <string name="hint_review_text">Berikan review Anda disini</string>
    <string name="rate_review_success">Rating dan review telah sukses dikirim</string>
    <string name="rate_review_validation_empty_rating_review">Dimohon untuk memberikan rating dan review Anda</string>
    <string name="speciality_desc_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Phasellus auctor at tellus sit amet consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Aliquam erat volutpat. Donec cursus auctor semper. Quisque sed diam et libero cursus scelerisque.
        Ut iaculis interdum dolor, in vulputate orci elementum vitae.</string>
    <string name="detail_trainer_toolbar_name">Detail Pelatih</string>
    <string name="trainer_schedule_title">Jadwal Latihan</string>
    <string name="day_name_dummy">Wednesday</string>
    <string name="btn_upload_title">Upload Bukti Bayar</string>
    <string name="btn_cancel_title">Batalkan Booking</string>
    <string name="schedule_session_information_placeholder">Body Combat by Armstrong</string>
    <string name="schedule_session_time_placeholder">11.00 - 12.00</string>
    <string name="schedule_session_description_placeholder">Lorem ipsum dolor sit amet</string>
    <string name="body_weight">Berat badan</string>
    <string name="height">Tinggi</string>
    <string name="submit">Kirim</string>
    <string name="onboarding">Onboarding</string>
    <string name="muhealth_welcome">Selamat datang ke MuHealth!</string>
    <string name="muhealth_prompt_enter_information">Untuk mulai menggunakan MuHealth, kami membutuhkan informasi berikut:</string>
</resources>