<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_ic_mutrain_selector"
        android:title="@string/title_home"/>

    <item android:id="@+id/navigation_history"
        android:icon="@drawable/nav_ic_history_selector"
        android:title="@string/title_history"
        app:actionViewClass="android.view.View" />

    <item android:id="@+id/navigation_schedule"
        android:icon="@drawable/nav_ic_schedule_selector"
        android:title="@string/title_schedule"
        app:actionViewClass="android.view.View"/>

    <item
        android:id="@+id/navigation_muhealth"
        android:icon="@drawable/ic_muhealth_orange"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_navigasi_login_button_orange"
        android:title="@string/title_login" />

</menu>
