<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white100"
    tools:context="com.nostratech.mufit.consumer.register.TosActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/tos"
        android:textSize="24sp"/>

    <ScrollView
        android:id="@+id/scrollview_text_desc"
        android:layout_below="@id/text_title"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_tos_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/text_tos"
            android:textSize="20sp"/>
    </ScrollView>

    <LinearLayout
        android:layout_below="@id/scrollview_text_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <CheckBox
            android:id="@+id/checkbox_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black54"
            android:textColor="@color/black54"
            android:text="@string/agree"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background_blue"
            android:text="@string/next"
            android:textColor="@color/white100"
            android:textSize="14sp"/>
    </LinearLayout>


</RelativeLayout>